tests/fixtures/invalid/pow_bool_set_bool.py
# Cannot call pow() with Bool, Set[int], Bool
x = pow(True, {1, 2, 3}, True)
